--- a/layouts/partials/widgets/CV.html
+++ b/layouts/partials/widgets/CV.html
@@ -22,8 +22,9 @@
   <div class="col-xs-12 col-md-4 section-heading">
     <h1>CV</h1>
     <p>Curriculum Vitae</p>
-    <a class="btn btn-primary btn-outline btn-xs" href="../CV/cv.pdf">
+    <a class="btn btn-primary btn-outline btn-xs" href="CV/cv.pdf">
       Download Complete CV
+      {{% staticref "CV/cv.pdf" "newtab" %}}Download my CV{{% /staticref %}}
     </a>
   </div>
   <div class="col-12 col-lg-8">
