--- a/layouts/partials/widgets/CV.html
+++ b/layouts/partials/widgets/CV.html
@@ -22,7 +22,7 @@
   <div class="col-xs-12 col-md-4 section-heading">
     <h1>CV</h1>
     <p>Curriculum Vitae</p>
-    <a class="btn btn-primary btn-outline btn-xs" href="CV/cv.pdf">
+    <a class="btn btn-primary btn-outline btn-xs" href="CV/CV.pdf">
       Download Complete CV
     </a>
   </div>
@@ -36,7 +36,6 @@
         <h3>{{ i18n "interests" | markdownify }}</h3>
         <ul class="ul-interests">
           {{ range . }}
-          Test blabla     {{% staticref "CV/cv.pdf" "newtab" %}}Download my CV{{% /staticref %}}
           <li>{{ . | markdownify | emojify }}</li>
           {{ end }}
         </ul>
