--- a/layouts/partials/widgets/CV.html
+++ b/layouts/partials/widgets/CV.html
@@ -22,7 +22,7 @@
   <div class="col-xs-12 col-md-4 section-heading">
     <h1>CV</h1>
     <p>Curriculum Vitae</p>
-    <a class="btn btn-primary btn-outline btn-xs" href="CV/CV.pdf">
+    <a class="btn btn-primary btn-outline btn-xs" href="../CV/CV.pdf">
       Download Complete CV
     </a>
   </div>
