--- a/layouts/partials/widgets/aboutmod.html
+++ b/layouts/partials/widgets/aboutmod.html
@@ -64,7 +64,7 @@
         </li>
         {{ end }}
       </ul>
-
+<a class="twitter-timeline" data-width="100%" data-height="300" data-theme="dark" data-chrome="noheader, nofooter, noborders" href="https://twitter.com/StoecklSeb?ref_src=twsrc%5Etfw">Tweets by StoecklSeb</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </div>
   <div class="col-12 col-lg-8">
